# metabase-import-export

./: .gitignore  Dockerfile  LICENSE.txt  README.md  setup.cfg
metabase_import_export/: __init__.py  cli.py
