[metadata]
name = metabase-import-export
description = Export/Import Metabase collections to JSON files.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = metabase
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
version = 0.2.3

[options]
zip_safe = False
packages = find:

install_requires =
    requests

include_package_data = True

[options.entry_points]
console_scripts =
    metabase-import-export = metabase_import_export.cli:main

[options.package_data]
* = *.md, *.txt
